@@ -8,9 +8,9 @@
 /* Used to make error messages. */
 extern const char *cgi_prog;
 extern const char *cgi_file;
+extern int cgi_header_flag;
 
 void cgi_html_header(FILE *outp);
-void cgi_text_header(FILE *outp);
 void cgi_error(const char *fmt, ...);
 
 #endif /* not MISC_H */
